WS2-1081: Unity Design - Webspark Table Modal Fixes: Appropriate styling in Unity, Table Caption, Additional Spacing on sibling tables

--- a/src/sass/extends/_tables.scss
+++ b/src/sass/extends/_tables.scss
@@ -73,6 +73,15 @@
         }
       }
     }
+
+    caption {
+      caption-side: top;
+      font-size: $uds-size-font-xl;
+    }
+  }
+
+  &:has(caption) {
+    padding-top: $uds-size-spacing-4;
   }
 }
 
